--- a/english/word/simple-word/markdown/p12-p14.md
+++ b/english/word/simple-word/markdown/p12-p14.md
@@ -7,17 +7,18 @@
     - n. 文章；（物品的）一件
     - art- 连接
     - 物品的一件
-        - ...<u>instead of</u> Shopping alone, one article of clothing at a time（次数）. 不要一个人去购物，也不要一次只买一件衣服
-            - A instead of B == A rather than B 而不是（选择前边而不选择后边）
-- forest
+        - ...<u>instead of</u> Shopping alone, one article of clothing at a time(次数). 不要一个人去购物，也不要一次只买一件衣服
+            - A instead of B == A rather than B 是A而不是B（选择前边而不选择后边）
+- forest [ˈfɔːrɪst]
     - n. 森林
-- immediate
-    - adj. 立即的，即刻的；直接的；紧靠的 [ɪˈmiːdiət]
+- immediate [ɪˈmiːdiət]
+    - adj. 立即的，即刻的；直接的；紧靠的
     - medi- 中间的
     - 立即的，马上的
-        - Because electronic payments(电子支付) are immediate，they eliminate(v.消除) the float for the consumer.
+        - Because electronic payments(电子支付) are immediate，they eliminate([ɪˈlɪmɪneɪt] v.消除) the float for the
+          consumer.
     - 直接的
-        - Interest rates have an immediate effect on the economy(经济).
+        - Interest rates have an immediate effect on the economy([ɪˈkɑːnəmi] 经济).
 - sell
     - v. 卖，出售
     - sell-sold-sold
@@ -36,7 +37,7 @@
 - earn
     - vt. 赚得，获得
     - earn their living 谋生
-    - ...earned（获得） him a modest reputation 这为他赢得了一个不错的名声
+    - ...earned him a modest([ˈmɑːdɪst]) reputation 这为他赢得了一个不错的名声
     - earnings n. 薪水；工资；收入
     - earner n. 挣钱者
 - enjoy
@@ -46,9 +47,9 @@
 - grade
     - n. 等级；分数； vt. 把...分等级
 - indeed
-    - adv. 真正地，当然；确实（同一方面递进）
+    - adv. 确实（同一方面递进）；真正地，当然
     - Are there divisive issues in America? Indeed，It is big enough to have a bit of everything.
-    - furthermore/moreover 此外，进一步说（不同方面递进）
+    - furthermore([ˌfɜːrðərˈmɔːr])/moreover 此外，进一步说（不同方面递进）
 - link
     - v. 连接，联系
 - month
@@ -61,7 +62,7 @@
 - store
     - vt. 储存，贮藏 n. 商店
     - 储存
-        - Many writers prudently(谨慎地) store their data on disks(磁盘).
+        - Many writers prudently([ˈprudəntlɪ] 谨慎地) store their data on disks(磁盘).
     - 商店
         - The longer you stay in the store, the more stuff(商品，货物) you’ll see, the more you'll buy.
 - style
@@ -73,11 +74,11 @@
 - third
     - num. 第三
     - n. 三分之一: a third, one third
-    - first, second, third, fourth, fifth, sixth, seventh, eighth, nineth
-- certain
+    - first, second, third, fourth, fifth, sixth, seventh, eighth, ninth
+- certain [ˈsɜːrtn]
     - adj. 某一个，确定的 pron. 某些
     - cert- 搞清
-        - certify 证明，证实
+        - certify [ˈsɜːrtɪfaɪ] 证明，证实
         - certificate n. 证书，文凭
     - certainly adv. 确定，无疑
     - certainty n. 确定性，必然的事
@@ -86,15 +87,16 @@
     - 神态,气场
         - He is a musician with the air of kindness. 他是个和善的音乐家
 - anyone
-- cancer
+- cancer [ˈkænsər]
     - n. 癌症；
     - It causes cancer in humans. 它会在人类中引起癌症
+    - corner n. 角，角落;
 - everything
 - female
     - adj. 雌的，女性的
     - male
 - fire
-    - n. 火；射击；vt. 开枪；**解雇** vi. 燃烧，着火
+    - vt. **解雇** 开枪；n. 火；射击；vi. 燃烧，着火
     - a fire-and-hire strategy 解雇和雇佣策略
 - freedom
 - giant
@@ -128,13 +130,14 @@
     - vt./n. 提及，说起；vi. 提及，说起(mention of)
     - ment- 想
     - When mentioned (of) Dongsheng Zhang，we can think of going hiking.
-- quite
-    - adv. 相当；颇 [kwaɪt]
+- quite [kwaɪt]
+    - adv. 相当；颇
     - quiet adj. 安静的 [ˈkwaɪət]
-- serious
-    - adj. 严重的；重大的；严肃的；认真的 [ˈsɪriəs]
+    - quick
+- serious [ˈsɪriəs]
+    - adj. 严重的；重大的；严肃的；认真的
     - 认真的，严肃的（人）
-        - If we are serious about ensuring that our science... 如果我们真的想确保我们的科学...
+        - If we are serious about ensuring that our science([ˈsaɪəns])... 如果我们真的想确保我们的科学...
     - 严重的，重大的（物）
         - in the face of a serious threat(威胁)
 - simple
@@ -149,7 +152,9 @@
 - warm
     - adj. 温暖的；热情的；（色调）暖的；v. 使暖起来
     - warmth n.温暖
-- experiment
+- experiment  [ɪkˈsperɪmənt]
+    - n. 实验; 试用
+    - experience [ɪkˈspɪriəns] n. 经验; 经历; 往事 v. 经历; 感受
 - agency
     - n. 代理机构；（政府）专门机构(CIA)
     - travel agency
@@ -163,13 +168,13 @@
 - enter
     - vt. 进入，参加，登录 vi. 进入
     - entry n. 进入
-    - entrance n. 入口 v./n. 进入 [ˈentrəns]
+    - entrance [ˈentrəns] n. 入口 v./n. 进入
     - enter vs entrance
         - enter 具体的进入
         - entrance 抽象的进入，Case: 入学
 - male
     - adj. 男性的
-    - male nurse 男护士
+    - male nurse([nɜːrs]) 男护士
 - per
     - prep. 每，每一
     - 前缀：全部，贯穿
@@ -191,7 +196,7 @@
 - story
     - n. 故事，小说；报道
     - 报道
-        - Journalists(记者) can make political[pəˈlɪtɪkl] stories.
+        - Journalists([ˈdʒɜːrnəlɪst] n. 记者) can make political([pəˈlɪtɪkl]) stories.
 - bird
     - n. 鸟；禽
     - rare bird 表示少有的人，奇葩
@@ -203,11 +208,11 @@
         - If you head downhill（山下）
 - score
     - n. 分数，刻痕； vt. 得分；给...评分；刻痕于 vi. 得分，记分
-    - Many people scored worse on measures[ˈmeʒər] of fluid intelligence. 许多人在流体智力方面的得分更差。
+    - Many people scored worse on measures([ˈmeʒər]) of fluid intelligence. 许多人在流体智力方面的得分更差。
 - size
     - n. 尺寸，大小
-    - assiss 评估 （现写assess）
-    - oversize
+    - assess [əˈses] v. 评估
+    - oversize adj. 太大的; 超大型的
 - wide
     - adj. 宽阔的；广泛的； adv. 尽可能远的
     - 广泛的
@@ -216,16 +221,16 @@
 - catch
     - vt. 抓住；赶上；感染；吸引；领会，听清楚
     - 吸引
-        - What is graphically(形象的) and explicitly(明确的) depicted in the simple yet eye-catching drawing is that...
+        - What is graphically([ˈɡræfɪklɪ] 形象的) and explicitly([ɪk'splɪsɪtlɪ] 明确的) depicted in the simple yet eye-catching drawing is that...
           在简单而引人注目的图画中，以图形和明确的方式描绘的是
     - 赶上 catch up
-        - while still <u>catching up</u> in some spheres of modern life... 在现代生活的某些领域仍在努力追赶
-- colleague
-    - n. 同事 [ˈkɑːliːɡ]
+        - while still <u>catching up</u> in some spheres([sfɪr]) of modern life... 在现代生活的某些领域仍在努力追赶
+- colleague [ˈkɑːliːɡ]
+    - n. 同事
     - college
 - easily
-- exercise
-    - n. 锻炼，练习 [ˈeksərsaɪz]
+- exercise [ˈeksərsaɪz]
+    - n. 锻炼，练习
     - erc- 力量
 - hot
     - adj. 热的
@@ -235,7 +240,7 @@
     - 具体数字“两无”(无s/无of), 模糊概念“两有”(有s/有of)
     - A hundred and eighty-five kilograms.
     - hundreds/thousands/millions of small rural village.
-    - hundreds of thousands of acres(亩) 数以十万计的
+    - hundreds of thousands of acres([ˈeɪkər] 亩) 数以十万计的
 - love
 - print
     - vt. 印刷 n. 印刷品
@@ -246,12 +251,12 @@
     - 速度赛
         - Park run is not a race but a time trail.
     - n. 种族
-        - ease(缓和) conflicts between races and classes(阶级)
+        - ease([iːz] 缓和) conflicts between races and classes(阶级)
 - rest
     - n. 其余的人或物
     - for the rest of us 对于我们其他的人
     - vi. 依靠 rest on/upon
-        - Good governance <u>rests on</u> an understanding of... 良好的治理建立在对...的理解之上。
+        - Good governance([ˈɡʌvərnəns] n. 统治; 管理; 支配;) <u>rests on</u> an understanding of... 良好的治理建立在对...的理解之上。
 - introduce
     - v. 介绍；引进
     - The gardens of the homeless <u>introduce from into</u> an urban environment. 无家可归者的花园将人们引入城市环境
@@ -260,9 +265,9 @@
 - dioxide [daɪˈɑːksaɪd]
     - n. 二氧化碳
     - **carbon dioxide**
-- eventually
+- eventually [ɪˈventʃuəli]
     - adv. 最后地
-    - eventual adj. 最后的
+    - eventual [ɪˈventʃuəl] adj. 最后的
 - flow
     - n. 流动，流量 vi. 流动
     - flo-fla-flu 流
@@ -276,8 +281,8 @@
     - wealth n. 财富
         - wealthy adj. 富有的
 - himself
-- journalist
-    - n. 记者 [ˈdʒɜːrnəlɪst]
+- journalist [ˈdʒɜːrnəlɪst]
+    - n. 记者
     - journal n. 期刊
 - let
     - vt. 允许，让
@@ -285,7 +290,7 @@
 - nurse
     - n. 护士
     - nur- 培养
-        - nurture v. 培养
+        - nurture [ˈnɜːrtʃər] v. 培养
     - nursery n. 托儿所，保育室
 - street
     - n. 街道
@@ -297,12 +302,12 @@
     - waiter n. 男服务员
     - waitress n. 女服务员
     - actor, actress
-- conversation
-    - n. 交谈 [ˌkɑːnvərˈseɪʃn]
-- aspect
-    - n. 样貌；方面 [ˈæspekt]
+- conversation [ˌkɑːnvərˈseɪʃn]
+    - n. 交谈 
+- aspect [ˈæspekt]
+    - n. 样貌；方面
     - First，scientific work(研究) <u>tends to(往往)</u> focus on some aspect of prevailing(盛行的) knowledge...
-    - facade n. 外表; 虚伪，假象
+    - facade [fəˈsɑːd] n. 外表; 虚伪，假象
         - Facade Pattern 门面模式
 - farm
     - n. 农场
@@ -312,11 +317,11 @@
     - founding fathers 美国开国元勋；美国1787宪法制定者
 - fight
     - n. 战斗，打架
-    - The courage to fight suffering(苦难) renders life worth living. 战胜苦难的勇气使生命值得活下去
+    - The courage to fight suffering([ˈsʌfərɪŋ] 苦难) renders life worth living. 战胜苦难的勇气使生命值得活下去
     - night, right
 - frequently
     - adv. 频繁地。经常
-    - Mass-market（大众市场） labels（品牌，标签） urge consumers to shop for their clothes more frequently.
+    - Mass-market(大众市场) labels(品牌，标签) urge consumers to shop for their clothes more frequently.
     - frequent adj. 经常发生的
 - hardly
     - adv. 几乎不，简直不（否定）
@@ -335,7 +340,7 @@
     - 在于 lie in/with
         - The problem of fake news lies in "misunderstanding of actual news".
     - 谎言
-        - That's a lie that we have perpetuated.（延续）
+        - That's a lie that we have perpetuated([pərˈpetʃueɪt] 延续).
     - 规则是说谎，不规则是躺；躺过就下蛋，下蛋就规则
     - 说谎
         - lie-lied-lied-lying
@@ -345,6 +350,7 @@
         - lay-laid-laid-laying
 - near
     - adv. 近，在近处（可以指时间，空间，程度）
+    - nearly adv. 几乎，差不多
 - net
     - n. 网； vt. **净赚**； adj. 净的，纯的(remaining after all deductions(扣除))
     - 净赚（扣除所有成本）
@@ -363,8 +369,9 @@
 - sleep
     - v. 睡眠
     - sleep-slept-slept
-- smell
+- smell [smel]
     - n. 气味； vt. 闻到
+    - smile [smaɪl]
 - team
     - n. 队，组队； v. 合作(team up)
 - tree
@@ -373,7 +380,7 @@
     - n. 田地；运动场；领域
     - playing field 运动场
     - 领域
-        - Academic inquiry, at least in some fields, may need... 学术研究，至少在某些领域，可能需要...
+        - Academic inquiry([ɪnˈkwaɪəri]), at least in some fields, may need... 学术研究，至少在某些领域，可能需要...
 - chart
     - n. **图表**，航图，海图
 - email
@@ -384,8 +391,8 @@
 - pick
     - vi. 选择，挑选；采摘
     - I can pick a date from the past 53 years.
-- rapidly
-    - adv. 迅速地；快速地 ['ræpɪdli]
+- rapidly ['ræpɪdli]
+    - adv. 迅速地；快速地
     - rapid adj. 快速的
 - sit
     - vi. 坐
