--- a/english/word/simple-word/markdown/p27-p29.md
+++ b/english/word/simple-word/markdown/p27-p29.md
@@ -109,7 +109,7 @@
     - n. 标签，品牌； vt. 给...加标签
     - price tag 价签
     - 给...加标签
-        - Tagging environmentalists(环保主义者) as "anti-science(反科学)" is justifiable(正当的).
+        - Tagging environmentalists(环保主义者) as "anti-science([ˈsaɪəns] 反科学)" is justifiable(正当的).
 - badly
     - adv. 坏，差；严重的；有害的
     - 与需要连用时翻译成**迫切需要**
