--- a/english/word/simple-word/markdown/p33-p35.md
+++ b/english/word/simple-word/markdown/p33-p35.md
@@ -20,7 +20,7 @@
     - vt. 为...祈神赐福 
     - ...to bless the union.
     - blessing n. 祝福；好事
-        - The ruling was a blessing to films and patients.
+        - The ruling([ˈrulɪŋ]) was a blessing to films and patients([ˈpeɪʃnt]).
 - okay/OK
 - grape
     - n. 葡萄
@@ -35,7 +35,8 @@
 - clip [klɪp]
     - v. **剪**，修剪； n. **片段**；回形针 
     - 片段
-        - Participants(参与者) watched shorter video clips.
+        - Participants([pɑːrˈtɪsɪpənt] 参与者) watched shorter video clips.
+          - participate v. 参与，参加
     - 剪
         - You have to clip a paragraph([ˈpærəɡræf]) to place it elsewhere.
     - slip
@@ -68,11 +69,11 @@
     - portion vs part
         - part 整体当中的一部分
         - portion 个体能拿到的一部分
-    - **proportion** n. 比例，比重
+    - **proportion** [prəˈpɔːrʃn] n. 比例，比重
         - The proportion of studying by mobile phone is 59%.
 - frightened [ˈfraɪtnd]
     - adj. 惊吓的，受惊的 
-    - fright n. 恐惧；
+    - fright [fraɪt] n. 恐惧；
     - frighten v. 使...恐惧
     - fight v. 打仗
 - afterward(s)
@@ -84,7 +85,7 @@
 - starve [stɑːrv]
     - v. 使挨饿，使饿死 
     - ste- 僵硬
-        - stern adj. 严厉的
+        - stern [stɜːrn] adj. 严厉的
     - when's food? I'm starving
 - artwork
     - n. 艺术品，美术品
@@ -100,6 +101,8 @@
     - turb- 转，搅拌
         - turbine [ˈtɜːrbaɪn] n. 涡轮机，汽轮机
     - They disturbed the power balance between different states.
+    - distribute [dɪˈstrɪbjuːt] v. 分发; 配销; 分配; 分散; 撒，播
+    - contribute [kənˈtrɪbjuːt] v. 捐献; 增加，增进; 做贡献;
 - recover
     - vi. **恢复，痊愈**； vt. 重新得到
     - cover v. 掩盖； n. 遮盖物
@@ -140,6 +143,7 @@
         - university
 - pathway
     - n. 小路，小径
+    - lane n. 小路; 小巷;
 - altogether
     - adv. 完全；总之，总共
     - There are altogether 40 students in this class.
@@ -174,7 +178,7 @@
     - excellent adj. 优秀的，卓越的
     - excellence n. 优秀；卓越，杰出
 - Monday
-- preferable
+- preferable  [ˈprefrəbl]
     - adj. 更可取的，更好的
         - it is preferable for sb. to do sth. 对于某人而言更可取的是去做某事
             - It is preferable for journalists([ˈdʒɜːrnəlɪst] 记者) to rely(依靠) on their own notions(主张，看法) of significance(重要性).
@@ -224,13 +228,14 @@
 - pop
     - vi. 突然出现；爆开； n. 流行音乐
     - pop into my mind 突然进入我的脑海中
-- grin
+- grin [ɡrɪn]
     - v./n. 咧嘴笑
     - gain vt. 获得
 - relax
     - v. 放松；缓和
     - relaxation n. 放松，消遣 [ˌriːlækˈseɪʃn]
-- horse
+- horse [hɔːrs]
+  - house [haʊs]
 - December [dɪˈsembər]
 - scan
     - vt./n. 浏览，扫描
@@ -257,6 +262,7 @@
     - n. **代币；礼券**；adj. 象征性的，装样子的
 - coast [koʊst]
     - n. **海岸，海滨**； v. 惯性滑行 
+    - cause [kɔːz] v. 导致，引起
 - neighbor
 - cousin [ˈkʌzn]
     - n. 堂兄弟，表姐妹 
@@ -284,7 +290,7 @@
 - vain [veɪn]
     - adj. 徒劳的，自负的 
     - van- 空
-        - vanish 消失
+        - vanish [ˈvænɪʃ] 消失
         - vanity 虚荣心
     - Americans <u>take a</u> vain <u>pride in</u> their long <u>life expectancy(预期寿命)</u>. 美国人对自己较长的寿命抱有虚荣的自豪感
         - take a...pride in 以...为傲/因...而感到自豪
@@ -307,7 +313,8 @@
 - marketplace
     - n. **集市，市场**；市场竞争
 - unusually
-    - adv. 特别地，很(放在 adj. 之前表示强调)
+    - adv. 特别地，很(放在 adj. 之前表示强调); 非常; 不寻常地，异乎寻常地;
+      - usually adv. 通常，经常，平常 
 - alien [ˈeɪliən]
     - adj. 外国的；**外国人的**；陌生的 n. **外国人**，外星人 
 - anyway
@@ -316,7 +323,7 @@
     - n. 爆炸声，猛击 
     - big bang 宇宙大爆炸理论
 - careless
-    - adj. 不小心的；不仔细的
+    - adj. 不小心的；不仔细的; 漠不关心的
 - angry
     - adj. 发怒的，愤怒的
     - anger n. 愤怒
@@ -348,6 +355,7 @@
 - furniture [ˈfɜːrnɪtʃər]
     - n. 家具 
     - Here was the raw material of houses and furniture...
+    - future [ˈfjuːtʃər] n. 未来; 前途;
 - seize [siːz]
     - vt. 抓住，夺取，占据 
     - se- 播种
