--- a/english/word/simple-word/markdown/p36-p38.md
+++ b/english/word/simple-word/markdown/p36-p38.md
@@ -38,7 +38,7 @@
 - reproduce
     - v. **再现**，复制；繁殖，生殖
     - reproducible 再现的
-        - Our science is both meaningful and reproducible.
+        - Our science([ˈsaɪəns]) is both meaningful and reproducible.
     - produce v. 生产，制造
         - The country produces only about 60 percent of the food.
 - outdated
