--- a/english/word/simple-word/markdown/p48-p50.md
+++ b/english/word/simple-word/markdown/p48-p50.md
@@ -31,7 +31,7 @@
 - nonfiction
     - n. 非小说作品，纪实文学
     - fiction n. 小说作品，虚构故事
-        - science fiction 
+        - science([ˈsaɪəns]) fiction 
 - teamwork
     - n. 协同工作；配合
 - prince
