--- a/english/word/simple-word/markdown/p6-p8.md
+++ b/english/word/simple-word/markdown/p6-p8.md
@@ -189,8 +189,7 @@
 - draw
     - vt. 拖，拉:
     - vt. 吸引（注意等）
-        - draw attention to 关注: They want to use their wealth(财富) to draw attention to those who have successes in
-          science.
+        - draw attention to 关注: They want to use their wealth(财富) to draw attention to those who have successes in science([ˈsaɪəns]).
 - easy
     - adj. 安逸的
         - uneasy 不安
@@ -212,7 +211,7 @@
     - closely adv. 接近地
 - complete
     - vt.: IQ tests ask you to complete verbal and visual analogies(类比). 智力测试要求你完成语言和视觉类比
-    - adj. 完整的，完成的: But the intention is not to neglect social science; rather, the complete opposite.
+    - adj. 完整的，完成的: But the intention is not to neglect social science([ˈsaɪəns]); rather, the complete opposite.
       但我们的意图并不是忽视社会科学，而是完全相反。
 - decade
     - n. 十年
@@ -288,7 +287,7 @@
 - half
 - art
     - n. 技术
-    - pl. arts 文科: ...with the arts and sciences flourishing(繁荣)...
+    - pl. arts 文科: ...with the arts and sciences([ˈsaɪəns]) flourishing(繁荣)...
 - body
     - n. 主体
 - eye
