--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -4,7 +4,7 @@
 <p align="right">January 9, 2010</p>
 &emsp;&emsp;&emsp;&emsp;Volunteers are needed for the International Conference on Globalization to be held on this campus in early July.<br>
 &emsp;&emsp;&emsp;&emsp;Basic requirements are familiarity with the theme of the conference and proficiency in English. Other requirements include good interpersonal communication abilities, familiarity with our city's tourist attractions and its history, proper manners, and a strong sense of responsibility. Preference will be given to those experienced in international conferences or other similar activities.<br>
-&emsp;&emsp;&emsp;&emsp;Call 86754321 or email postgr@ccc.edu.cn for an application and for information on the interview. Phone and email enquiries and encouraged; no visited please.<br>
+&emsp;&emsp;&emsp;&emsp;Call 86754321 or email postgr@ccc.edu.cn for an application and for information on the interview. Phone and email enquiries are encouraged; no visited please.<br>
 <p align="right">Postgraduates' Association</p>
 
 ## 002
@@ -152,7 +152,7 @@ Dear Paul,<br>
 Dear Paul,<br>
 &emsp;&emsp;&emsp;&emsp;Thank you for your congratulations! In September, I'm going to pursue my master's degree in Peking University, one of the top two universities in China.<br>
 &emsp;&emsp;&emsp;&emsp;Established in 1898, Peking University was originally founded as the Imperial University of Peking-the first national comprehensive university in modern China. For over a century, she had contributed to the development of China and the change of the destiny of its people. As China's leading higher education institution for teaching and researching, Peking University enjoys an excellent academic reputation, attracting top scholars and students from China and all over the world.
-&emsp;&emsp;&emsp;&emsp;As for your application to a Chinese university, I suggest Peking University and Tsinghua University as your best choices. Your resume and application letter play a vital role in application. Looking forward to your reply.
+&emsp;&emsp;&emsp;&emsp;As for your application to a Chinese university, I suggest Peking University and Tsinghua University as your best choices. Your resume and application letter play a vital role in application. Looking forward to your reply.<br>
 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
