--- a/english/word/simple-word/markdown/p1-p2.md
+++ b/english/word/simple-word/markdown/p1-p2.md
@@ -3,9 +3,8 @@
 - the
     - 特指: 指代某个特定的，特别的，特殊的对象. Pass me the book. He is the tallest in our classroom.
     - 用于比较级: the 比较级...the 比较级 “越...越...”: The harder you work, the greater progress you will make.
-    - 独指（天地西方普）: the earth, the sun, the Pacific Ocean, the West Lake, the guitar, the piano, on the left, on the
-      south, the Great Wall
-    - 类指(后加形容词)：the young, the old, the Greens
+    - 独指（天地西方普）: the earth, the sun, the Pacific Ocean, the West Lake, the guitar, the piano, on the left, on the south, the Great Wall，the People's Repulic of China
+    - 类指(后加形容词表示一类人)：the young, the old, （加姓氏的复数表示一家人）the Greens
     - 固定搭配: by the end, in the end, all the time
 - of
     - A of B: B 的 A
@@ -13,6 +12,7 @@
         - the role of the teacher
 - to
     - to do: 目的
+    - prep. 向，忘；对，给
     - look forward to 期待
     - devote oneself to 投身于
     - have access to 和...接触
@@ -32,12 +32,14 @@
 - a/an
     - 元头an，辅头a；不看字母看发音: an umbrella, a university, an hour, a house
 - and
+    - conj. **和；然后**；那么；还
     - The program has provided enough food and medicine.
     - That means going home for dinner and then working long.
 - in
+    - prep. **在..里面**； adv. 在里面；
     - prep. => prep. + n.: in the box, in 1989, in Jan, speak in English, write in ink,
     - She was not lacking in courage.
-    - adv. => 修饰名词之前的所有成分
+    - adv. => 修饰名词之外的所有成分
 - be
     - am, is, are: I am, He is, A dog is, you are, they are
     - was, were
@@ -61,47 +63,53 @@
         - I teach myself English.
         - We must finish the task by ourselves.
 - for
+    - prep. 为了，给；因为；就...而言；赞成； conj. 因为+句子
     - He wa tall for an right-year-old.
     - The Spanish case provides arguments both for and against monar
     - We listened eagerly, for he brought news of our families.
 - are
 - he
+    - pron. 他，不论性别的他
 - you
 - have
+    - vt. **有**；吃，喝；已经；不得不（后接不定式）
     - aux. v.: I have finished my homework.
     - vt.: I have some homework.
     - have to do 不得不: I have to finish my homework.
 - as: 正如
     - adv. & prep., 接单词, 作为；像: You need to be able to work as part of a team.
-    - conj. 接句子, 当...时；因为
+    - conj. 接句子, 当...时，随着；因为；
         - I used to go everywhere with my mother, as I was the youngest.
         - As he got older, his memory got worse.
 - with: 带有，因为
-    - Mental health allows us to view others with sympathy.
-    - university men with literature ambitions
-    - I never fell overwhelmed with/for the amount of information my brain absorbs.
+    - prep. 和...一起；用，以
+    - 用，以：Mental health allows us to view others with sympathy.
+    - 带有：university men with literature ambitions
+    - 因为：I never fell overwhelmed with/for the amount of information my brain absorbs.
 - on
+    - prep. （有接触的）在...上； adv. 向前，继续下去
     - Mark your answers on ANSWER SHEET1.
     - effects on the environment
     - may wish to move on
     - 在...的时候，+天: on a cold winter's day
 - by
     - prep. 被, 通过, 不迟于
-        - It is sponsored by 163 countries.
-        - She was given a pen by her father.
-        - By most recent measures[ˈmeʒər], the UK's GDP has been the envy of the Western world.
-        - by 表示在规定时间点前完成，动作未必是持续的；until 表示时间点完成并持续做某事
-            - Some of the "core skills" will change by/until 2022.
+    - It is sponsored by 163 countries.
+    - She was given a pen by her father.
+    - By most recent measures[ˈmeʒər], the UK's GDP has been the envy of the Western world.
+    - by 表示在规定时间点前完成，动作未必是持续的；until 表示时间点完成并持续做某事
+        - Some of the "core skills" will change by/until 2022.
 - not
 - its
 - this
 - can
-    - modal v.
+    - modal v. 可以；可能； n. 罐子； vt. 罐装
+    - modal v. 
         - +动词原型: I can finish my homework.
         - 否定直接在后面加 not: I can not finish my homework.
     - We've only got cans of beef.
 - from
-    - prep. 远离，出自:
+    - prep. 远离，出自:（**远离**）
         - These range from around $500 to $5000.
         - protecting it from being defamed
         - prevent suspects from deleting their phone contents
@@ -117,20 +125,23 @@
     - None but he knew the truth.
 - at
     - +地点(小)/时间(小): arrived in ChangChun, arrived at ChangChun state, at five o'clock
+    - in + 大地点
 - one
 - your
 - will
+    - modal v. 将，会；愿意； n. 意志
     - Will you send this letter for me, please?
     - In spite of(不管；尽管) what happened he never lost the will to live.
     - She willed her eyes to stay open.
 - willing adj. 愿意的、乐意的
-    - Passengers will not be willing to pay more.
+    - Passengers will not <u>ube willing to</u> pay more.
 - do
     - aux. v. Do you love me?
     - 加强语气 I do love you.
     - vt. I am doing homework
 - people
     - two people/many people
+    - peoples 种族
 - which
     - I don't know which one
     - There are two extra choices, which do not fit in any of the blanks.
@@ -149,6 +160,7 @@
     - 谁用 who，啥what，距离就要用how far，哪里where，为何why，何时用when很哇塞，哪个which加人、物，谁的whose长得酷，最后如何how帮助
     - +ever 翻译成 “无论...” why除外
 - good
+    - adj. 好的；擅长的；有益的；愉快的； n. 好处；利益，货物
     - adj. 大量的: a good number
     - It does nobody any good.
     - n. 货物: providing common goods
@@ -156,6 +168,7 @@
     - You make me happy
     - made, made
 - about
+    - prep. 关于； adv. 大约；到处
     - prep.: We are much more rigid about immigrants.
     - adv.: about 2 million departed
     - Her books were lying about on the floor.
@@ -174,8 +187,8 @@
     | may | might | 可能 |
 
 - there
-    - pron. 与 be 连用，表示 “有”
-        - There is a girl in she shops.
+    - pron. 与 be 连用，表示 “有” be根据临近的n. 单复数选择
+        - There is a girl in the shop.
         - There is some milk in the cup.
         - There is a cat and two dogs on the floor.
 - what
@@ -205,11 +218,11 @@
 - if
     - conj. 引导条件状语从句, 如果；假如: If you have surplus vegetables you'll do a vegetable soup.
     - conj. 引导名词性从句, 是否: Soon you'll feel conformable asking if they've any ham for soups.
-    - He's a good driver, if a litter over-confident.
+    - 即使：He's a good driver, if a litter over-confident.
 - new
-    - news n. 新闻
+    - news n. 新闻（不可数）
 - time
-    - n. 时间: I have some time
+    - n. 时间（不可数）: I have some time
         - on time 按时
         - in time 及时
         - at the some time 与此同时
@@ -217,6 +230,7 @@
         - by the time 到…时候为止; 等到; 比及
     - n. 次数、倍数: three times
 - follow
+    - vt. 跟随；遵照；领会；理解
     - It is advisable to follow the FSA advice.
     - his power to follow an abstract <u>train of thought想法</u> was very limited
 - write
@@ -225,24 +239,30 @@
 - year
 - all
 - when
-    - conj. 在...时 时间状语从句
+    - conj. 在...时 连接时间状语从句
 - would
 - point
+    - n. **要点**；标点；得分
     - Introduce the key points of your presentation.
     - Happiness is not a point of future.
+    - point to 指向，指明
     - You want to point to where it's useful for employees to go to.
-    - points out that where are enough people.
+    - <u>points out</u>（指出） that where are enough people.
 - most
     - adj.: Most jobs are multidimensional([ˌmʌltidɪˈmɛnʃənəl] adj. 多面的，多维的)
 - part
-    - n. 部分
-    - v. (使)分开: She hated being parted from the children.
+    - n. **部分**； adv. 部分地
+    - v. **(使)分开**: She hated being parted from the children.
+    - 词根： 部分，分开
+        - depart v. 离开
+        - partial adj. 偏爱的
+        - impartial 公正的
 - we
 - into
     - go into the room/in the classroom
 - some 某些
     - adj.: some water, some people
-    - adv. 大约: some two years
+    - adv. 大约（往往在数字前边）: some two years
 - many
     - adj. + 可数名词复数: There are many people.
     - pron.: Many of the students have great results.
@@ -281,11 +301,13 @@
         - stay up 熬夜不睡
         - end up 以...结束
 - out
-    - adv. 在外
+    - adv. 在外；完；大声地；出于
         - out of date
         - out of wilderness
 - such 
     - adj. 这样的，如此的
+    - such + n.
+    - so + 除了n. 之外的词
     - so(adv.) vs such(adj.)
         - such a fool
         - so beautiful
@@ -293,11 +315,12 @@
         - suck workers
         - such/so...that... 如此以至于
 - need
-    - modal v.: 
+    - modal v.:
         - I need to get a cup of tea.
         - I need finish my JDC reciting.
     - n.: The handsome English teacher is my need.
 - so
+    - adv. 那么，非常；这样，那样； conj. 因而，所以
     - That's can make the conversation so memorable.
     - But it did so.
     - conj.: so I decided that it was not the right path for me.
