--- a/english/word/simple-word/markdown/p15-p17.md
+++ b/english/word/simple-word/markdown/p15-p17.md
@@ -18,7 +18,7 @@
 - warn
     - v. 警告，告诫
     - warn of 发出...的警告
-        - ...to warn of the doom(厄运) of biomedical(生物医学) research.
+        - ...to <u>warn of</u> the doom(厄运) of biomedical([ˌbaɪoʊˈmedɪkl] 生物医学) research.
     - warning n. 警告，告诫
 - wealth
     - n. 财富，丰富
@@ -30,7 +30,7 @@
     - adj./adv. 单独的，孤独的
     - Washington alone has the power. 只有华盛顿才有权力
 - clean
-- continent
+- continent [ˈkɑːntɪnənt]
     - n. 大陆，洲
     - the Old Continent 欧洲大陆
 - dam
@@ -50,6 +50,7 @@
 - phrase [freɪz]
     - n. 短语
     - The phrase "flagged up" is the closest in meaning to... 短语“flagged up”在意思上最接近于...
+    - phase [freɪz] n. 阶段; 时期
 - player
     - n. 游戏者；运动员
 - post
@@ -75,7 +76,7 @@
         - to help families weather bad times(时期)
 - widely
     - adv. 普遍地，广泛地
-- attempt
+- attempt [əˈtempt]
     - v./n. 尝试，试图
     - attempt to do sth 尝试做
         - In his work，he attempted to show how all aspects(方面) of culture changed.
@@ -83,8 +84,8 @@
 - annual [ˈænjuəl]
     - adj. 每年的，年度的； n. 年报，年刊
     - ann- 年
-    - The new vaccine(n. 疫苗), which is different from the annual vaccine.
-    - anniversary n. 周年纪念 [ˌænɪˈvɜːrsəri]
+    - The new vaccine([vækˈsiːn] n. 疫苗), which is different from the annual vaccine.
+    - anniversary [ˌænɪˈvɜːrsəri] n. 周年纪念 
 - cheap
     - adj. 劣质的；便宜的；
     - affordable/inexpensive 便宜的
@@ -111,7 +112,7 @@
     - n. 痛苦，疼痛
     - no pain，no gain 不劳无获
 - plate
-    - n. **盘子**，碟子；金属板；**板块**
+    - n. **板块**，**盘子**，碟子；金属板；
     - 板块
         - The motion of the plates corresponds(对应) to that of the earth's interior(内部的).
 - royal [ˈrɔɪəl]
@@ -150,17 +151,18 @@
 - sun
 - wind
     - n. 风；v. 缠，绕
-    - Wind the bandage(绷带) around your finger.
+    - Wind the bandage([ˈbændɪdʒ] 绷带) around your finger.
 - activity
     - n. 活动
     - active adj. 活跃的
 - citizen
     - n. 市民，公民
+    - civilization n. 文明; 文明社会;
 - editor [ˈedɪtər]
     - n. 编辑，编者
     - edit vt. 编辑；剪辑
-        - Moral(道德) awareness(意识) matters in editing a newspaper. 道德意识在编辑报纸时很重要
-    - edition [ɪˈdɪʃn] n. 版本 
+        - Moral([ˈmɔːrəl] 道德) awareness([əˈwernəs] 意识) matters in editing a newspaper. 道德意识在编辑报纸时很重要
+    - edition [ɪˈdɪʃn] n. 版本
 - fuel [ˈfjuːəl]
     - n. 燃料；v. 给...加燃料
     - v. 给...加燃料
@@ -211,7 +213,7 @@
     - adj. 危险的
     - danger n. 危险；危险事物，威胁
         - in danger 处于危险当中
-        - The church reminded worshippers(信徒) that their souls(灵魂) were in danger.
+        - The church reminded worshippers([ˈwɜːrʃɪpər] 信徒) that their souls(灵魂) were in danger.
     - dangerously adv. 危险地
 - diet [ˈdaɪət]
     - n. 日常饮食； vi. 节食
@@ -252,7 +254,8 @@
         - mass-market(大众市场) labels such as Zara，H&M，and Uniqlo.
         - mass n. 一团; 大堆; 大量; 块; 民众; 大部分;
     - label...as 把...称为
-        - Today we have a tendency([ˈtendənsi] 趋势) to <u>label</u> obesity([oʊˈbisəti] 肥胖) <u>as</u> a disgrace([dɪsˈɡreɪs] 耻辱).
+        - Today we have a tendency([ˈtendənsi] 趋势) to <u>label</u> obesity([oʊˈbisəti] 肥胖) <u>as</u> a
+          disgrace([dɪsˈɡreɪs] 耻辱).
 - manner
     - n. 态度，举止；风度；方法，方式
     - man- 手
@@ -297,6 +300,7 @@
     - v.燃烧； n. 烧伤
     - bur- 燃烧
     - This suggests that dimmer bulbs([bʌlb] 暗淡) burn longer. 这表明，调暗的灯泡燃烧的时间更长
+    - born v. 出生; 天生;
 - complain
     - vi. 抱怨，诉苦
     - com- 共同，一起
@@ -316,11 +320,13 @@
     - put forward 提出
         - Gerbert Spencer put forward his own theory([ˈθiːəri] 理论) of cultural evolution(进化).
     - adj. 向前的
-        - The court's([kɔːrt]) ruling is a step forward(向前的一步) in the struggle([ˈstrʌɡl] 斗争) against corruption([kəˈrʌpʃn] 腐败).
+        - The court's([kɔːrt]) ruling is a step forward(向前的一步) in the struggle([ˈstrʌɡl] 斗争) against
+          corruption([kəˈrʌpʃn] 腐败).
     - vt. 转递
 - garden
     - n. 花园
     - gardener n. 园工
+    - gender n. 性别
 - harmful
     - adj. 有害的
     - be harmful to 有害
@@ -338,6 +344,7 @@
     - n. 杂志，期刊
     - mag- == mac- == mat- 揉，捏；力量
     - imagine [ɪˈmædʒɪn] v. 想象; 猜测; 臆想; 认为
+    - journal n. 期刊
 - meanwhile
     - adv. 与此同时
         - Meanwhile，it has more than $120 billion...
@@ -349,13 +356,14 @@
         - adj. 吝啬的，小气的
             - She is a mean old woman.
         - mean, meant, meant, meaning
-- medicine
+- medicine [ˈmedɪsn]
     - n. 内服药；医学
     - medic- 药物
     - 药物
         - The program has provided enough food and medicine.
     - 医学
-        - Modern medicine has prolonged the physical([ˈfɪzɪkl]) agony([ˈæɡəni] n. 极度痛苦; 创痛) of dying. 现代医学延长了死亡的肉体痛苦
+        - Modern medicine has prolonged the physical([ˈfɪzɪkl]) agony([ˈæɡəni] n. 极度痛苦; 创痛) of dying.
+          现代医学延长了死亡的肉体痛苦
     - medical adj. 医疗的，药物的
 - party
     - n. **党派**，政党；**当事人**；聚会
@@ -364,10 +372,11 @@
 - path
     - n. 小路
     - pathway n. 小路，小径
+    - lane n. 小路; 小巷;
 - please [pliːz]
     - vt. 使高兴
     - Be easily pleased
-    - pleasure n. 高兴，愉悦
+    - pleasure [ˈpleʒər] n. 高兴，愉悦
         - Happiness is <u>more than(+n. 不仅仅)</u> pleasure without pain. 幸福不仅仅是没有痛苦的快乐
     - pleasant adj. 愉悦的
         - He had such a pleasant, readable style. 他的写作风格令人愉快，读起来很有趣
@@ -376,7 +385,7 @@
 - police [pəˈliːs]
     - n. 警察部门，警方
     - the police 警方
-    - polite adj. 有礼貌的
+    - polite [pəˈlaɪt] adj. 有礼貌的
     - politics [ˈpɑːlətɪks] n. 政治，政治学
     - policy [ˈpɑːləsi] n. 政策
         - policymaker 政策制定者
@@ -419,7 +428,7 @@
         - dropped, sitting, beginning
 - quick
     - adj. 快的，快速的
-- cite
+- cite [saɪt]
     - vt. 引用，引证
     - cit- 引用，唤起
         - recite 背诵
@@ -427,6 +436,7 @@
         - incite 激励
     - 出现在阅读题题干中是例证题的标志
         - ![Example](https://uy.wzznft.com/i/2025/08/16/s7bio8.png)
+    - cute [kjuːt] adj. 漂亮迷人的; 有性吸引力的; 精明的
 - admit
     - vt. 允许...进入，承认
     - mit- == miss- 送
@@ -450,14 +460,14 @@
 - boy
 - cell
     - n. **细胞**；小牢房
-- certainly
+- certainly [ˈsɜːrtnli]
     - adv. 无疑，确定，当然
     - **certain** adj. 确定的
 - column
     - n. 专栏；圆柱
     - column chart 柱状图
-    - ...match each of the numbered items in the left column to its corresponding([ˌkɔːrəˈspɑːndɪŋ] 相应的) information in the right
-      column.
+    - ...match each of the numbered items in the left column to its corresponding([ˌkɔːrəˈspɑːndɪŋ] 相应的) information
+      in the right column.
 - crop [krɑːp]
     - n. 庄稼；收成； vt. 有收成
     - vt. 有收成
