--- a/english/word/simple-word/markdown/p36-p38.md
+++ b/english/word/simple-word/markdown/p36-p38.md
@@ -10,11 +10,11 @@
     - n. 殖民者；移民
         - the early settlers of Massachusetts Bay
     - settle v. **解决，处理，定居**；结束争论
-        - It will settle the prior controversies.
+        - It will settle the prior([ˈpraɪər] adj. 优先的;) controversies([ˈkɑːntrəvɜːrsi] n. 争论; 辩论).
 - hugely
     - adv. 极度；非常
 - flag
-    - n.旗帜，旗
+    - n. 旗帜，旗
 - **petrol**/gasoline/gasolene [ˈpetrəl]
     - n. 汽油
     - peter- 石头
@@ -37,7 +37,7 @@
     - adv. 很大程度上；大量地
 - reproduce
     - v. **再现**，复制；繁殖，生殖
-    - reproducible 再现的
+    - reproducible [ˌriprə'djusəbl] 再现的
         - Our science([ˈsaɪəns]) is both meaningful and reproducible.
     - produce v. 生产，制造
         - The country produces only about 60 percent of the food.
@@ -53,7 +53,7 @@
     - n. 彩票；碰运气的事
 - vessel [ˈvesl]
     - n. **穿，舰；血管**；容器
-    - Today's vessel can find their prey using satellites and sonar.
+    - Today's vessel can find their prey([preɪ]) using satellites([ˈsætəlaɪt] n. 卫星; 人造卫星;) and sonar([ˈsoʊnɑːr] n. 声呐装置).
     - blood vessel
 - backyard
     - n. 后院
@@ -79,7 +79,7 @@
     - vi. 偷，行窃； vt. 偷盗，窃取
     - Dishonest person might be able to steal from someone else's accounts
     - steal - stole - stolen
-    - stalk v. 偷偷接近，跟踪
+    - stalk [stɔːk] v. 偷偷接近，跟踪
 - afraid
     - adj. 害怕的
     - be afraid of
@@ -103,17 +103,17 @@
 - readership
     - n. 全体读者
     - -ship 表示一个集体或一个关系
-- fancy
+- fancy [ˈfænsi]
     - n. **想象力；幻想** vt. 喜欢；想象
     - You'll sometimes change your mind about what you fancy.
-- bubble
+- bubble [ˈbʌbl]
     - n. 泡泡，水泡
 - grateful
     - adj. 感激的，感谢的
     - grat- 感激，高兴
         - gratitude n. 感激，感谢
     - be grateful to sb. for sth. 因某事而感激某人
-        - We <u>are particularly</u> grateful <u>to him for</u> his timely help.
+        - We <u>are</u>  particularly <u>grateful to him for</u> his timely help.
 - dot
     - n. 点； vt. 点缀，打点与
 - pave [peɪv]
@@ -122,7 +122,7 @@
     - cave 山洞
     - wave 波动
     - 住在山洞cave，用脚铺路pave；看到水流wave
-- fool
+- fool [fuːl]
     - vt. **愚弄** n. 笨蛋
     - foolish adj. 愚蠢的；荒谬的
 - nationally [ˈnæʃənlɪ]
@@ -145,7 +145,7 @@
 - eighty
 - quarrel [ˈkwɑːrəl]
     - n. 争吵，不和
-    - oral adj. 口头的
+    - oral [ˈɔːrəl] adj. 口头的
 - repair
     - vt. 修理，修补
 - makeup
@@ -202,7 +202,7 @@
     - n. 神秘性，神秘的事或人
 - mild
     - adj. 温和的；温暖的
-    - wild
+    - wild [waɪld] adj. 野生的；荒凉的
 - slogan
     - n. 标语，口号
 - shy [ʃaɪ]
@@ -251,7 +251,7 @@
     - The new land was carved into 13 states，including three slave states.
 - twin
     - n. 双胞胎； adj. 孪生的
-- elder
+- elder [ˈeldər]
     - adj. 年龄大的，年长的； n.（pl. ）长者，长辈
     - older
 - kick [kɪk]
@@ -263,11 +263,11 @@
 - rank
     - n. 等级，排； vt. 把...分等级；排列
     - Last year，he was ranked second in his age group.
-    - range n. 范围，排序
+    - range [reɪndʒ] n. 范围，排序
         - orange
 - calendar
     - n. 日历，日程表
-    - the lunar calendar 农历
+    - the lunar([ˈluːnər]) calendar 农历
     - the solar calendar 公历
 - bedroom
 - knight [naɪt]
@@ -294,7 +294,7 @@
     - adv. 完全地，十足地; 纯粹地;
 - enjoyable
     - adj. 有乐趣的; 令人愉快的
-- slim
+- slim [slɪm]
     - adj. 苗条的；纤细的
 - cabin [ˈkæbɪn]
     - n. 机舱，船舱；小木屋
@@ -323,7 +323,7 @@
     - cite- 引用；唤起
 - blood [blʌd]
     - n. 血液
-    - bleed v. 流血
+    - bleed [bliːd] v. 流血
 - keyword
 - quarterly [ˈkwɔːrtərli]
     - adj. 极度的；每季的
